trunk/src/sass/App.scss
/* ... */
.close-console-button {
    margin-right: 20px;
    margin-bottom: 10px;
    width: 25px;
    height: 25px;
    cursor: pointer;
    transition: transform $duration-fast02 $motion-entrance-productive;

    &:hover {
        transform: scale(1.1);
    }
}

// -----------------------------------------------------------------
// - Messages (info, error, warning...)
// -----------------------------------------------------------------

@keyframes msg-show {
    0% { transform: translateY(30px); opacity: 0; }
    100% { transform: translateY(0); opacity: 1; }
}

@keyframes msg-hide {
    0% { transform: translateY(0px); opacity: 1; }
    100% { transform: translateY(30px); opacity: 0; }
}

.msg-wrap {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    border-radius: 5px;
    transition: background-color $duration-moderate01 $motion-exit-productive;

    &.-hide {
        background-color: transparent;

        .msg-message {
            animation: msg-hide $duration-moderate01 $motion-exit-productive forwards;
            transition: background-color $duration-moderate01 $motion-entrance-productive;
        }
    }

    .icon {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;
        margin-right: 10px;
    }

    .msg-message {
        position: absolute;
        right: 10px;
        top: -25px;
        height: 25px;
        line-height: 25px;
        font-size: 0.7rem;
        font-weight: bold;
        border-radius: 3px 3px 0 0;
        padding: 0 10px;
        z-index: -1;
        animation: msg-show $duration-moderate01 $motion-entrance-productive backwards;
    }
}

.msg-info {
    background-color: #16a6e9;
    .icon { fill: rgb(207, 236, 255); }
    .msg-message { background-color: #16a6e9; color: rgb(207, 236, 255); }
}
.msg-success {
    background-color: #16d154;
    .icon { fill: rgb(207, 255, 207); }
    .msg-message { background-color: #16d154; color: rgb(207, 255, 207); }
}
.msg-warning {
    background-color: #e07f10;
    .icon { fill: rgb(255, 232, 221); }
    .msg-message { background-color: #e07f10; color: rgb(255, 232, 221); }
}
.msg-error {
    background-color: #E91916;
    .icon { fill: rgb(255, 176, 176); }
    .msg-message { background-color: #E91916; color:rgb(255, 176, 176); }
}

// -----------------------------------------------------------------
// - Notify Lines
// -----------------------------------------------------------------

@keyframes notify-show {
    0% { transform: translateY(-30px); opacity: 0; }
    100% { transform: translateY(0); opacity: 1; }
}

.notify-lines-wrap {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 4;
    width: 75%;
    font-size: 1.1rem;

    @include mq($until: tablet) {
        width: 100%;
    }

    &.say-opened {
        .say-button {
            display: block;

            .say-svg {
                fill: #fff;
            }
        }
        .say-txt {
            display: block;
            padding: 0 15px;
            animation: notify-show $duration-moderate01 $motion-entrance-productive;
        }
        .notify-input-wrap {
            display: block;
            animation: notify-show $duration-moderate01 $motion-entrance-productive;
        }
    }

    &.say-closed {
        .notify-input-area {
            display: flex;
            justify-content: flex-start;
        }
    }
}

.notify-lines {
    width: 100%;
    min-height: 100px;
    padding: 5px;
    border-bottom: 1px solid transparent;
    box-sizing: border-box;

    .line-wrap {
        width: 100%;
        padding: 3px 10px;
        display: flex;
        flex-wrap: nowrap;
        align-items: flex-start;
        border-bottom: 1px solid transparent;
        box-sizing: border-box;
        color: #fff;
        text-shadow: rgba(0, 0, 0, 0.9) 1px 1px 1px;
    }

    .player-name {
        white-space: nowrap;
        padding-right: 5px;

        @include mq($until: tablet) {
            max-width: 50%;
            text-overflow: ellipsis;
        }
    }

    .message {
        flex-grow: 2;
        align-self: center;
        width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;

        @include mq($until: tablet) {
            width: unset;
        }
    }

    .qcolor0 {
        text-shadow: rgba(255, 255, 255, 0.6) 1px 1px 0px;
    }
}

.notify-input-area {
    width: 100%;
    max-height: 60px;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px 20px;
    box-sizing: border-box;
    position: relative;
    transition: transform $duration-fast02 $motion-entrance-productive;

    .say-button {
        display: inline-block;
        cursor: pointer;
        font-size: 0;
        transition: transform $duration-fast02 $motion-entrance-productive;
        user-select: none;

        &:hover {
            transform: scale(1.1);
        }
    }

    .say-svg {
        fill: #9147FF;
        width: 25px;
        height: 25px;

        &.opened {
            background: rgba(0, 0, 0, 0.2);
            border-radius: 25px;
        }
    }

    .say-txt {
        color: #fff;
        padding-right: 15px;
        display: none;
        text-shadow: rgba(0, 0, 0, 0.9) 1px 1px 1px;
    }
}

.notify-input-wrap {
    padding: 2px;
    border-radius: 5px;
    flex-grow: 2;
    box-sizing: border-box;
    position: relative;
    background-image: linear-gradient(to right, rgba(#111, 0.5) 0%, transparent 50%);
    display: none;

    .notify-input {
        border: none;
        padding: 8px 10px;
        outline: 0;
        border-radius: 4px;
        width: 100%;
        font-family: 'Inter', Roobert, 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        font-size: 1rem;
        box-sizing: border-box;
        position: relative;
        z-index: 3;
        background: transparent;
        color: #fff;
    }
}
/* ... */

